# bloark

./: .gitignore  README.md  build.sh  pyproject.toml  serve.sh
bloark/: __init__.py  builder.py  builder_helpers.py  decorators.py  logger.py  modifier.py  reader.py  utils.py  warehouse.py
docs/source/: api-references.rst  conf.py  get-started.md  index.md  introduction.md  unstable-notices.md  utility-functions.rst
docs/source/_static/: style.css
docs/source/architecture/: builder.md  cluster-requirements.md  definitions.md  metadata.md  modifier.md
docs/source/examples/: minimal-builder.md  minimal-modifier.md
docs/source/resources/: api-references.rst  changelog.md
docs/source/root/: get-started.md  introduction.md
test/: conftest.py  test_build.py  test_builder_core.py  test_downloader.py  test_preload.py  test_reader_core.py
test/sample_data/: sample_block.jsonl.zst
test/utils/: __init__.py  mock_7z_files.py  mock_zst_files.py
tests/: benchmark.py  conftest.py  test_builder_core.py  test_modifier_core.py  test_preload.py  test_reader_core.py
tests/sample_data/sample_warehouses/: warehouse_00001.metadata
tests/scripts/: builder_example.py  modifier_example.py
tests/utils/: __init__.py  mock_7z_files.py  mock_preload_files.py
twb/: __init__.py  bip.py  builder.py  builder_v2.py  decompressor.py  downloader.py  logger.py  logger_init.py  modifier.py  parallelization.py  reader.py  utils.py  warehouse.py
