[tool.poetry]
name = "twb-project"
version = "1.1.1"
description = "An unified tool for the research in extracting information from Wikipedia Edit History chunk."
authors = ["Lingxi Li <hi@lingxi.li>"]
license = "GNU GPL"
readme = "README.md"
packages = [
    { include = "twb" },
]
homepage = "https://twb.lingxi.li/"
repository = "https://github.com/lilingxi01/twb-project"

[tool.poetry.dependencies]
python = ">=3.8,<4"
py7zr = "^0.20.5"
xmltodict = "^0.13.0"
jsonlines = "^3.1.0"
zstandard = "^0.21.0"
psutil = "^5.9.5"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[tool.poetry.scripts]
benchmark = "tests.benchmark:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
