[tool.poetry]
name = "bloark"
version = "2.3.1"
description = "Blocks Architecture (BloArk): A unified tool for processing revision-based data efficiently."
authors = ["Lingxi Li <hi@lingxi.li>"]
license = "GNU GPL"
readme = "README.md"
packages = [
    { include = "bloark" },
]
homepage = "https://bloark.lingxi.li/"
repository = "https://github.com/lilingxi01/bloark"

[tool.poetry.dependencies]
python = ">=3.8,<4"
py7zr = "^0.20.5"
xmltodict = "^0.13.0"
jsonlines = "^3.1.0"
zstandard = "^0.21.0"
psutil = "^5.9.5"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
tqdm = "^4.65.0"
wrapt = "^1.15.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
sphinx = "^6.2.1"
sphinx-autobuild = "^2021.3.14"
myst-parser = "^2.0.0"
sphinx-book-theme = "^1.0.1"
sphinx-favicon = "^1.0.1"
sphinx-copybutton = "^0.5.2"

[tool.poetry.scripts]
benchmark = "tests.benchmark:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
